# DWG

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindLIBIGL.cmake
geometry-central/include/geometrycentral/surface/: exact_geodesic_helpers.h  exact_geodesics.h  vertex_position_geometry.h
geometry-central/src/: CMakeLists.txt
geometry-central/src/surface/: geodesic_centroidal_voronoi_tessellation.cpp
include/: DWGProcess.h  MarchingCubeCuda.h  TurboDWG.h  TurboNormalInit.h  Turbo_GWN_l.h  utils.h
include/cudaKDTree/cukd/: builder.h  builder_thrust.h
include/geometrycentral/: vector3.h
libigl/: .gitignore
libigl/cmake/: LibiglDownloadExternal.cmake
libigl/include/igl/: cotmatrix.cpp  cotmatrix.h  dual_contouring.cpp  fast_winding_number.cpp  is_symmetric.cpp  march_cube.cpp  march_cube.h  marching_cubes.cpp  per_corner_normals.cpp  per_corner_normals.h  per_face_normals.cpp  polygon_corners.cpp  quadprog.h  slice.cpp  swept_volume.cpp  tetrahedralized_grid.cpp  tetrahedralized_grid.h  voxel_grid.cpp  voxel_grid.h
libigl/include/igl/copyleft/: marching_cubes_tables.h
libigl/include/igl/copyleft/cgal/: point_areas.cpp
libigl/include/igl/opengl/: gl.h
libigl/tutorial/109_ImGuizmo/: main.cpp
libigl/tutorial/111_MatCap/: main.cpp
libigl/tutorial/704_SignedDistance/: main.cpp
src/: KNN_GWN.cu  TurboDWG.cu  TurboLibiGWN.cu  TurboMC.cu  TurboNormalInit.cu  main.cpp
